// Package health æä¾›UTXOé›†å¥åº·æ£€æŸ¥ä¸è‡ªåŠ¨ä¿®å¤åŠŸèƒ½
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - æ‰«æUTXOé›†ï¼Œæ£€æµ‹BlockHeight=0çš„æŸåæ•°æ®
// - è‡ªåŠ¨æ¨æ–­å¹¶ä¿®å¤æŸåUTXOçš„BlockHeightå­—æ®µ
// - ç”Ÿæˆè¯¦ç»†çš„å¥åº·æ£€æŸ¥æŠ¥å‘Š
//
// ğŸ“‹ **è‡ªæ¢å¤ç­–ç•¥**ï¼š
// - æ–¹æ³•1ï¼šä»åŒºå—é“¾æŸ¥æ‰¾äº¤æ˜“æ‰€åœ¨åŒºå—ï¼ˆç²¾ç¡®ï¼‰
// - æ–¹æ³•2ï¼šä½¿ç”¨é“¾å°–é«˜åº¦ä½œä¸ºä¿å®ˆä¼°è®¡ï¼ˆfallbackï¼‰
package health

import (
	"context"
	"fmt"
	"time"

	"google.golang.org/protobuf/proto"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	chainif "github.com/weisyn/v1/pkg/interfaces/persistence"
)

// ============================================================================
//                              å¥åº·æ£€æŸ¥å™¨
// ============================================================================

// HealthChecker æä¾›UTXOé›†å¥åº·æ£€æŸ¥ä¸è‡ªåŠ¨ä¿®å¤åŠŸèƒ½
type HealthChecker struct {
	storage    storage.BadgerStore
	chainQuery chainif.ChainQuery // ç”¨äºæŸ¥è¯¢åŒºå—ä¿¡æ¯
	logger     log.Logger
}

// NewHealthChecker åˆ›å»ºå¥åº·æ£€æŸ¥å™¨å®ä¾‹
func NewHealthChecker(
	storage storage.BadgerStore,
	chainQuery chainif.ChainQuery,
	logger log.Logger,
) *HealthChecker {
	return &HealthChecker{
		storage:    storage,
		chainQuery: chainQuery,
		logger:     logger,
	}
}

// ============================================================================
//                              æ•°æ®ç»“æ„
// ============================================================================

// HealthReport å¥åº·æ£€æŸ¥æŠ¥å‘Š
type HealthReport struct {
	StartTime         time.Time      // å¼€å§‹æ—¶é—´
	EndTime           time.Time      // ç»“æŸæ—¶é—´
	TotalUTXOs        int            // æ€»UTXOæ•°é‡
	CorruptUTXOs      int            // æŸåUTXOæ•°é‡
	RepairedUTXOs     int            // å·²ä¿®å¤UTXOæ•°é‡
	UnrepairableUTXOs int            // æ— æ³•ä¿®å¤UTXOæ•°é‡
	RepairRecords     []RepairRecord // ä¿®å¤è®°å½•åˆ—è¡¨
}

// RepairRecord ä¿®å¤è®°å½•
type RepairRecord struct {
	Outpoint  *transaction.OutPoint // UTXOæ ‡è¯†
	OldHeight uint64                // ä¿®å¤å‰é«˜åº¦
	NewHeight uint64                // ä¿®å¤åé«˜åº¦
	Timestamp time.Time             // ä¿®å¤æ—¶é—´
}

// ============================================================================
//                              å¥åº·æ£€æŸ¥
// ============================================================================

// PerformCheck æ‰§è¡ŒUTXOé›†å¥åº·æ£€æŸ¥
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - autoRepair: æ˜¯å¦è‡ªåŠ¨ä¿®å¤æŸåçš„UTXO
//
// è¿”å›ï¼š
//   - *HealthReport: å¥åº·æ£€æŸ¥æŠ¥å‘Š
//   - error: é”™è¯¯ä¿¡æ¯
func (c *HealthChecker) PerformCheck(ctx context.Context, autoRepair bool) (*HealthReport, error) {
	report := &HealthReport{
		StartTime:     time.Now(),
		RepairRecords: make([]RepairRecord, 0),
	}

	if c.logger != nil {
		c.logger.Infof("ğŸ” å¼€å§‹UTXOé›†å¥åº·æ£€æŸ¥ (è‡ªåŠ¨ä¿®å¤=%v)", autoRepair)
	}

	// 1. æ‰«ææ‰€æœ‰UTXO
	utxoPrefix := []byte("utxo:set:")
	utxoMap, err := c.storage.PrefixScan(ctx, utxoPrefix)
	if err != nil {
		return nil, fmt.Errorf("æ‰«æUTXOé›†å¤±è´¥: %w", err)
	}

	report.TotalUTXOs = len(utxoMap)

	// 2. æ£€æŸ¥æ¯ä¸ªUTXO
	for key, utxoData := range utxoMap {
		utxoObj := &utxo.UTXO{}
		if err := proto.Unmarshal(utxoData, utxoObj); err != nil {
			if c.logger != nil {
				c.logger.Warnf("ååºåˆ—åŒ–UTXOå¤±è´¥ï¼Œè·³è¿‡: key=%s, err=%v", string(key), err)
			}
			report.CorruptUTXOs++
			report.UnrepairableUTXOs++
			continue
		}

		// æ£€æŸ¥BlockHeightå­—æ®µ
		if utxoObj.BlockHeight == 0 {
			report.CorruptUTXOs++

			if c.logger != nil {
				c.logger.Warnf("âš ï¸ å‘ç°æŸåUTXO: outpoint=%x:%d, BlockHeight=0",
					utxoObj.Outpoint.TxId, utxoObj.Outpoint.OutputIndex)
			}

			if autoRepair {
				// å°è¯•ä¿®å¤
				correctHeight, err := c.inferBlockHeight(ctx, utxoObj)
				if err != nil {
					if c.logger != nil {
						c.logger.Warnf("æ— æ³•æ¨æ–­UTXOé«˜åº¦: outpoint=%x:%d, err=%v",
							utxoObj.Outpoint.TxId, utxoObj.Outpoint.OutputIndex, err)
					}
					report.UnrepairableUTXOs++
					continue
				}

				// ä¿®å¤å¹¶å†™å›æ•°æ®åº“
				utxoObj.BlockHeight = correctHeight
				newData, err := proto.Marshal(utxoObj)
				if err != nil {
					if c.logger != nil {
						c.logger.Errorf("é‡æ–°åºåˆ—åŒ–UTXOå¤±è´¥: outpoint=%x:%d, err=%v",
							utxoObj.Outpoint.TxId, utxoObj.Outpoint.OutputIndex, err)
					}
					report.UnrepairableUTXOs++
					continue
				}

				if err := c.storage.Set(ctx, []byte(key), newData); err != nil {
					if c.logger != nil {
						c.logger.Errorf("å†™å›ä¿®å¤åçš„UTXOå¤±è´¥: outpoint=%x:%d, err=%v",
							utxoObj.Outpoint.TxId, utxoObj.Outpoint.OutputIndex, err)
					}
					report.UnrepairableUTXOs++
					continue
				}

				// è®°å½•ä¿®å¤æˆåŠŸ
				report.RepairedUTXOs++
				report.RepairRecords = append(report.RepairRecords, RepairRecord{
					Outpoint:  utxoObj.Outpoint,
					OldHeight: 0,
					NewHeight: correctHeight,
					Timestamp: time.Now(),
				})

				if c.logger != nil {
					c.logger.Infof("âœ… å·²ä¿®å¤UTXO: outpoint=%x:%d, new_height=%d",
						utxoObj.Outpoint.TxId, utxoObj.Outpoint.OutputIndex, correctHeight)
				}
			}
		}
	}

	report.EndTime = time.Now()

	if c.logger != nil {
		duration := report.EndTime.Sub(report.StartTime)
		c.logger.Infof("âœ… UTXOé›†å¥åº·æ£€æŸ¥å®Œæˆ (è€—æ—¶: %v)", duration)
		c.logger.Infof("   æ€»UTXOæ•°é‡: %d", report.TotalUTXOs)
		c.logger.Infof("   æŸåUTXO: %d", report.CorruptUTXOs)
		c.logger.Infof("   å·²ä¿®å¤: %d", report.RepairedUTXOs)
		c.logger.Infof("   æ— æ³•ä¿®å¤: %d", report.UnrepairableUTXOs)
	}

	return report, nil
}

// ============================================================================
//                              é«˜åº¦æ¨æ–­
// ============================================================================

// inferBlockHeight æ¨æ–­UTXOçš„æ­£ç¡®åŒºå—é«˜åº¦
//
// ç­–ç•¥ï¼š
//
//	ä½¿ç”¨é“¾å°–é«˜åº¦ä½œä¸ºä¿å®ˆä¼°è®¡
//	ï¼ˆç²¾ç¡®æ¨æ–­éœ€è¦äº¤æ˜“ç´¢å¼•ï¼Œä½†è¿™ä¼šå¢åŠ ç³»ç»Ÿå¤æ‚åº¦ï¼Œæš‚ä¸å®ç°ï¼‰
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - utxoObj: å¾…ä¿®å¤çš„UTXOå¯¹è±¡
//
// è¿”å›ï¼š
//   - uint64: æ¨æ–­çš„åŒºå—é«˜åº¦
//   - error: é”™è¯¯ä¿¡æ¯
func (c *HealthChecker) inferBlockHeight(ctx context.Context, utxoObj *utxo.UTXO) (uint64, error) {
	// ä½¿ç”¨é“¾å°–é«˜åº¦ä½œä¸ºä¿å®ˆä¼°è®¡
	if c.chainQuery != nil {
		tipHeight, err := c.chainQuery.GetCurrentHeight(ctx)
		if err == nil && tipHeight > 0 {
			if c.logger != nil {
				c.logger.Warnf("ä½¿ç”¨é“¾å°–é«˜åº¦ä½œä¸ºUTXOé«˜åº¦çš„ä¿å®ˆä¼°è®¡: tx=%x, tip_height=%d",
					utxoObj.Outpoint.TxId, tipHeight)
			}
			return tipHeight, nil
		}
		if c.logger != nil && err != nil {
			c.logger.Errorf("è·å–é“¾å°–é«˜åº¦å¤±è´¥: %v", err)
		}
	}

	return 0, fmt.Errorf("æ— æ³•æ¨æ–­UTXOé«˜åº¦ï¼šæ— æ³•è·å–é“¾å°–é«˜åº¦")
}

// ============================================================================
//                              å·¥å…·å‡½æ•°
// ============================================================================

// buildUTXOKey æ„å»ºUTXOå­˜å‚¨é”®
func buildUTXOKey(outpoint *transaction.OutPoint) string {
	return fmt.Sprintf("utxo:set:%x:%d", outpoint.TxId, outpoint.OutputIndex)
}
